# neovim-flake

./: Dockerfile  README.md  flake.nix
nixvim-config/: configs.nix  dashboard.nix  debugging.nix  debugging.nix.2.bak  debugging.nix.bak  default.nix  keymaps.nix  lsp.nix  plugins.nix  search.nix  theme.nix
nixvim-config/dap-extra-config/: CMakeLists.txt  README.md
